# cutil

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  bench_harness.h
benchmarks/cutil/: bench_arraylist.c  bench_hashmap.c  bench_hashset.c
benchmarks/stl/: bench_unordered_map.cpp  bench_unordered_set.cpp  bench_vector.cpp
cmake/: cmake_uninstall.cmake.in  cutilConfig.cmake.in
lib/: CMakeLists.txt
lib/include/cutil/: cutil.h  log.h  status.h  stringbuilder.h
lib/include/cutil/data/generic/: array.h  iterator.h  list.h  map.h  object.h  set.h  type.h
lib/include/cutil/data/generic/list/: arraylist.h
lib/include/cutil/data/generic/map/: hashmap.h
lib/include/cutil/data/generic/set/: hashset.h
lib/include/cutil/data/native/: bitarray.h
lib/include/cutil/debug/: null.h
lib/include/cutil/io/: log.h
lib/include/cutil/os/: path.h
lib/include/cutil/posix/: getopt.h
lib/include/cutil/std/: inttypes.h  math.h  stdbool.h  stddef.h  stdio.h  stdlib.h  string.h
lib/include/cutil/string/: builder.h  type.h
lib/include/cutil/string/util/: iterator.h
lib/include/cutil/util/: compare.h  hash.h  macro.h
lib/src/: log.c  status.c  stringbuilder.c
lib/src/data/generic/: array.c  iterator.c  list.c  map.c  object.c  set.c  type.c
lib/src/data/generic/list/: arraylist.c
lib/src/data/generic/map/: hashmap.c
lib/src/data/generic/set/: hashset.c
lib/src/data/native/: bitarray.c
lib/src/io/: log.c
lib/src/os/: path.c
lib/src/posix/: getopt.c
lib/src/std/: stdio.c  stdlib.c  string.c
lib/src/string/: builder.c  type.c
lib/src/string/util/: iterator.c
lib/src/util/: compare.c  hash.c
tests/: CMakeLists.txt  test_log.c  test_stringbuilder.c
tests/cpp/: test_cpp.cpp
tests/data/generic/: test_array.c  test_iterator.c  test_list.c  test_map.c  test_object.c  test_set.c  test_type.c
tests/data/generic/list/: test_arraylist.c
tests/data/generic/map/: test_hashmap.c
tests/data/generic/set/: test_hashset.c
tests/data/native/: test_bitarray.c
tests/io/: test_log.c
tests/os/: test_path.c
tests/posix/: test_getopt.c
tests/std/: test_stdio.c  test_stdlib.c  test_string.c
tests/string/: test_builder.c  test_type.c
tests/string/util/: test_iterator.c
tests/util/: test_compare.c  test_hash.c
